# cast-studio

./: .gitignore  README.md  pyproject.toml
assets/demo/: demo.cast
cast_studio/: cli.py  cli_init.py  cli_render.py  cli_run.py  encoder.py  renderer.py  terminal.py
cast_studio/commands/: cast.py  init.py  render.py
cast_studio/templates/: demo.cfg.example  run_demo.sh
demo/: demo.cfg
